Prevent body width from jumping when content overflows

--- a/src/components/App/_layout.styl
+++ b/src/components/App/_layout.styl
@@ -10,6 +10,7 @@ body
 	background-color var(--background_color)
 	overflow-x hidden
 	line-height 1.5
+	width 100vw
 
 #title
 	color var(--color_07)
